# LegalRAGApp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  chains.py  generate_test_files.py  index_data.py  load_data.py  memory.py  prompts.py  pyproject.toml  search_docs.py  test_loaders.py
.github/workflows/: build-push.yaml  lint.yaml
