[project]
name = "legal-rag"
version = "0.1.0"
description = "A RAG application for legal documents"
authors = [
    {name = "Alaeddine Fattouch", email = "fattouchalaeddine@gmail.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-mistralai>=0.0.3",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "pypdf>=4.0.1",
    "streamlit>=1.32.0",
    "torch>=2.2.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true
